# stray

./: .clang-format  CMakeLists.txt  LICENSE
cmake/modules/: FindOpenEXR.cmake  Findembree.cmake
src/stray/: Kernels.h  Kernels.ispc  Math.h  Stray.cpp
